# opencat

./: pyproject.toml
code/: doab.py
data/: .gitignore
docs/: doab.md
notebooks/: doab.ipynb  isbn.ipynb
opencat/: doab.py
tests/: test_doab.py
tests/data/: doab.xml
