[tool.poetry]
name = "opencat"
version = "0.1.0"
description = ""
authors = ["mingiryu <mingi.ryu@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
polars = {extras = ["all"], version = "^0.17.2"}


[tool.poetry.group.dev.dependencies]
ipython = "^8.12.0"
flake8 = "^6.0.0"
black = "^23.3.0"
jupyterlab = "^3.6.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
