[tool.poetry]
name = "opencat"
version = "0.1.0"
description = ""
authors = ["mingiryu <mingi.ryu@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
polars = {extras = ["all"], version = "^0.17.2"}
lxml = "^4.9.2"
isbnlib = "^3.10.13"
nameparser = "^1.1.2"
pyarrow = "^11.0.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.12.0"
flake8 = "^6.0.0"
black = "^23.3.0"
jupyterlab = "^3.6.3"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
